﻿The QA40xPlot Changelog
--------------------------------------------
This changelog shows the changes made for each version
--------------------------------------------
v 1.2.6 asdfasdf
- get the dc supply voltage
- add a QA40x readme on ports
v 1.2.5 1/18/2026
- add space to run/start/get... buttons
- update mouse cursor in frequency response test when test runs
- add WhatsNew file to the delivery
- add a Residual display option to the Scope test
- don't allow page switching during a run
- improve scope Fit and PinToRange to support 5 digit (smaller) values
- add options to scope Residual Plot (1.2.5.4)
v 1.2.4 1/13/2026
- fixup selection of Transparent in color picker
- improve gain curve frequency selection
- add F6,F7 accelerators for start/stop
- swap Start to Run for spectrum, imd, and scope tests
- support untethered serializable UOM
- improve generator voltage messaging
- add a continuous run button to the Response/Gain/Crosstalk/Impedance tests
- upgrade esthetics of voltage unit button
- add Whats New file and button
v 1.2.3 1/4/2026
- add dates to changelog v tags
- nearly finish implementing thd vs amplitude update
- replace THD vs Amplitude test with new one with multi-frequency support
- support dual generator even with wave file in scope test
- make the miniplots movable
- use ZIP compression instead of Gzip for saved tests
- after testing with box5 remove the fourth pole from RIAA emphasis/deemphasis
- retain current graph settings when saving tests
- bump amp sweep data version # to 2
- add copy to all tests button to test info dialog
- add wave # to test message display
v 1.2.2 12/28/2025
- add phase axis settings on frequency response test
- add WaveFile generator option to use wav file (spectrum, scope)
- add RIAAChirp generator waveform for riaa preemphasis
- fix All On button to not enable Phase in sweep
- change expander icon for quick page buttons hiding
- simplify tab info dialog to remove unused left/right stuff