@@ -30,6 +30,16 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
+            <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="0" >
+                <Rectangle Fill="#40888888"  Width="2" />
+                <Label Content="USBDC: " VerticalAlignment="Center"  />
+                <Label Content="{Binding DCSupplyVoltage}" HorizontalAlignment="Right" Padding="0" VerticalAlignment="Center" />
+                <Label Content="V, " VerticalAlignment="Center" Padding="0"  />
+                <Label Content="{Binding DCSupplyCurrent}" HorizontalAlignment="Right" Padding="0" VerticalAlignment="Center"  />
+                <Label Content="mA  T: " VerticalAlignment="Center" Padding="0"  />
+                <Label Content="{Binding Temperature}" HorizontalAlignment="Right" Padding="0"  VerticalAlignment="Center" />
+                <Label Content="°C  " VerticalAlignment="Center" Padding="0" />
+            </StackPanel>
             <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="0" 
                         Visibility="{Binding ShowTabs, Converter={StaticResource BoolVisConverter}}" >
                 <Button Content="QA430" Click="OnQA430" Margin="4,2,4,2" Visibility="{Binding ShowQA430, Converter={StaticResource BoolVisConverter}}">
