@@ -58,7 +58,8 @@
     </tr>
     <tr>
         <td>18</td>
-        <td>?? 810</td>
+        <td>USB DC Current</td>
+        <td>The supply current requirement in mA</td>
     </tr>
     <tr>
         <td>19</td>
@@ -70,7 +71,8 @@
     </tr>
     <tr>
         <td>22</td>
-        <td>?? 250</td>
+        <td>Temperature</td>
+        <td>In 10*DegreesC</td>
     </tr>
     <tr>
         <td>25</td>
